# cross_detect_growing_up

./: CMakeLists.txt  README.md  Source.cpp  cross_detector.cpp  cross_detector.h  cv_supp.cpp  cv_supp.h  draw.cpp  hough_algo.cpp  hough_algo.h  main.cpp  opencv_train.vcxproj  opencv_train.vcxproj.filters  support.h
